--- a/AutomatedDesktopBackgroundUI/MainWindow.xaml
+++ b/AutomatedDesktopBackgroundUI/MainWindow.xaml
@@ -10,24 +10,24 @@
         
         <Label x:Name="header" Content="Automated Desktop Background" HorizontalAlignment="Left" Margin="37,22,0,0" VerticalAlignment="Top" FontFamily="MS Gothic" FontSize="36" Foreground="#FF535252"/>
         <TextBox x:Name="queryTextBox" HorizontalAlignment="Left" Height="27" Margin="395,146,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="242" />
-        <Button x:Name="querySearchButton" Content="Add Interest" HorizontalAlignment="Left" Margin="463,178,0,0" VerticalAlignment="Top" Width="126" RenderTransformOrigin="0.387,-0.45" Click="querySearchButton_Click"/>
+        <Button x:Name="querySearchButton" Content="Add Interest" HorizontalAlignment="Left" Margin="463,178,0,0" VerticalAlignment="Top" Width="126" RenderTransformOrigin="0.387,-0.45" Click="QuerySearchButton_Click"/>
         <Label Content="Interests" HorizontalAlignment="Left" Margin="24,140,0,0" VerticalAlignment="Top" Width="74" FontSize="14"/>
-        <Button x:Name="removeInterestButton" ToolTip="Removes any images that are associated with this interest unless they have been marked as favorite." Content="Remove Interest" HorizontalAlignment="Left" Margin="51,382,0,0" VerticalAlignment="Top" Width="152" Click="removeInterestButton_Click"/>
-        <Button x:Name="downloadButton" Content="Download New Collection" ToolTip="Select an interest from the interest list to download a new collection." HorizontalAlignment="Left" Margin="430,237,0,0" VerticalAlignment="Top" Width="190" Height="46" Click="downloadButton_Click" />
+        <Button x:Name="removeInterestButton" ToolTip="Removes any images that are associated with this interest unless they have been marked as favorite." Content="Remove Interest" HorizontalAlignment="Left" Margin="51,382,0,0" VerticalAlignment="Top" Width="152" Click="RemoveInterestButton_Click"/>
+        <Button x:Name="downloadButton" Content="Download New Collection" ToolTip="Select an interest from the interest list to download a new collection." HorizontalAlignment="Left" Margin="430,237,0,0" VerticalAlignment="Top" Width="190" Height="46" Click="DownloadButton_Click" />
         <ProgressBar x:Name="downloadProgressBar" HorizontalAlignment="Left" Height="14" Margin="425,303,0,0" VerticalAlignment="Top" Width="175"/>
         <Label x:Name="amountImagesDownloadedLabel" Content="" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="47" Height="23" Margin="600,294,0,0"/>
-        <Button x:Name="settingsButton" Content="Settings" HorizontalAlignment="Left" Margin="430,332,0,0" VerticalAlignment="Top" Width="190" Height="29" Click="settingsButton_Click"/>
-        <Button x:Name="closeProgramButton" Content="Close Program" HorizontalAlignment="Left" Margin="430,366,0,0" VerticalAlignment="Top" Width="190" Height="31" Click="closeProgramButton_Click"/>
+        <Button x:Name="settingsButton" Content="Settings" HorizontalAlignment="Left" Margin="430,332,0,0" VerticalAlignment="Top" Width="190" Height="29" Click="SettingsButton_Click"/>
+        <Button x:Name="closeProgramButton" Content="Close Program" HorizontalAlignment="Left" Margin="430,366,0,0" VerticalAlignment="Top" Width="190" Height="31" Click="CloseProgramButton_Click"/>
         <Label x:Name="backgroundRefreshLabel" Content="Background is Refreshing" HorizontalAlignment="Left" Margin="395,88,0,0" VerticalAlignment="Top" Width="156"/>
         <Label x:Name ="collectionRefreshLabel" Content="Collections are refreshing" HorizontalAlignment="Left" Margin="395,119,0,0" VerticalAlignment="Top" Width="147"/>
-        <Button x:Name="stopBackgroundRefreshButton" Content="Stop" HorizontalAlignment="Left" Margin="590,94,0,0" VerticalAlignment="Top" Width="75" Click="stopBackgroundRefreshButton_Click"/>
-        <Button x:Name="stopCollectionRefreshButton" Content="Stop" HorizontalAlignment="Left" Margin="590,121,0,0" VerticalAlignment="Top" Width="75" Click="stopCollectionRefreshButton_Click"/>
-        <Button x:Name="startBackgroundRefreshButton" Content="Start" HorizontalAlignment="Left" Margin="685,94,0,0" VerticalAlignment="Top" Width="75" Click="startBackgroundRefreshButton_Copy_Click"/>
-        <Button x:Name="startCollectionRefreshButton" Content="Start" HorizontalAlignment="Left" Margin="685,121,0,0" VerticalAlignment="Top" Width="75" Click="startCollectionRefreshButton_Copy_Click" />
+        <Button x:Name="stopBackgroundRefreshButton" Content="Stop" HorizontalAlignment="Left" Margin="590,94,0,0" VerticalAlignment="Top" Width="75" Click="StopBackgroundRefreshButton_Click"/>
+        <Button x:Name="stopCollectionRefreshButton" Content="Stop" HorizontalAlignment="Left" Margin="590,121,0,0" VerticalAlignment="Top" Width="75" Click="StopCollectionRefreshButton_Click"/>
+        <Button x:Name="startBackgroundRefreshButton" Content="Start" HorizontalAlignment="Left" Margin="685,94,0,0" VerticalAlignment="Top" Width="75" Click="StartBackgroundRefreshButton_Copy_Click"/>
+        <Button x:Name="startCollectionRefreshButton" Content="Start" HorizontalAlignment="Left" Margin="685,121,0,0" VerticalAlignment="Top" Width="75" Click="StartCollectionRefreshButton_Copy_Click" />
         <Label x:Name="currentImageLabel" Content="Current Image" HorizontalAlignment="Left" Margin="24,88,0,0" VerticalAlignment="Top" Width="336"/>
         <Button x:Name="LikeImageButton" ToolTip="Marks the image as a favorite so it will not be removed even if the image is removed." Content="Love it!" HorizontalAlignment="Left" Margin="176,119,0,0" VerticalAlignment="Top" Width="75" Click="FavoriteAImage_Click"/>
         <Button x:Name="HateImageButton" ToolTip="Deletes an image and bans the image from being downloaded again in the future" Content="Hate It!" HorizontalAlignment="Left" Margin="285,119,0,0" VerticalAlignment="Top" Width="75" Click="HateImage_Click"/>
-        <ListView x:Name="interestListView" HorizontalAlignment="Left" Height="199" Margin="24,174,0,0" VerticalAlignment="Top" Width="313" SelectionChanged="interestListView_SelectionChanged" >
+        <ListView x:Name="interestListView" HorizontalAlignment="Left" Height="199" Margin="24,174,0,0" VerticalAlignment="Top" Width="313" SelectionChanged="InterestListView_SelectionChanged" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn x:Name="InterestHeader" Header="Interest Name"  Width="200" DisplayMemberBinding="{Binding Name}"/>
