--- a/AutomatedDesktopBackgroundUI/MainWindow.xaml
+++ b/AutomatedDesktopBackgroundUI/MainWindow.xaml
@@ -205,7 +205,7 @@
         <Label x:Name="versionLabel" Content="v.1.2" HorizontalAlignment="Left" Margin="564,45.893,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,-0.308" Height="28" Width="46"/>
         <Label Content="Results" HorizontalAlignment="Left" Margin="235,159.38,0,0" VerticalAlignment="Top" Width="74" FontSize="14" RenderTransformOrigin="0.527,0.804" Foreground="#FF535252" FontFamily="Tahoma"/>
         <Button x:Name="quitApplicationButton" Style="{StaticResource simpleButtonStyle}" Padding="10"
-            ToolTip="Select an interest from the interest list to download a new collection." ContentStringFormat="Exit Application"
+            ToolTip="Shuts the application down" ContentStringFormat="Exit Application"
             HorizontalAlignment="Left" Margin="465,383,0,0" VerticalAlignment="Top" Width="219" Height="42" BorderBrush="{x:Null}" FontFamily="Tahoma" FontWeight="Bold"
                 Click="ExitApplicationButtonClick"/>
 
