--- a/AutomatedDesktopBackgroundUI/SettingsWindow.xaml
+++ b/AutomatedDesktopBackgroundUI/SettingsWindow.xaml
@@ -5,21 +5,149 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AutomatedDesktopBackgroundUI"
         mc:Ignorable="d"
-        Title="SettingsWindow" Height="450" Width="800">
-    <Grid Background="#7F78A2CD">
+        Title="SettingsWindow" Height="450" Width="800" WindowStyle="None" AllowsTransparency="True">
+    <Window.Resources>
+
+        <Style x:Key="myHeaderStyle" TargetType="{x:Type GridViewColumnHeader}">
+            <Setter Property="Visibility" Value="Collapsed" />
+        </Style>
+        <Style x:Key="settingsButtonStyle" TargetType="{x:Type Button}">
+            <Setter Property="OverridesDefaultStyle" Value="True"></Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button" >
+
+                        <Border Name="RootElement" ClipToBounds="False"  BorderThickness="5"  Width="50" Height="50" >
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="CommonStates">
+
+                                    <VisualState x:Name="Normal" />
+
+                                    <VisualState x:Name="MouseOver">
+                                        <Storyboard>
+                                            <DoubleAnimation Storyboard.TargetName="RootElement"  Storyboard.TargetProperty="Width"  From="50"
+                            To="54" Duration="0:0:.1">
+
+                                            </DoubleAnimation>
+                                            <DoubleAnimation Storyboard.TargetName="RootElement"  Storyboard.TargetProperty="Height"  From="50"
+                            To="54" Duration="0:0:.1">
+                                            </DoubleAnimation>
+                                        </Storyboard>
+                                    </VisualState>
+
+
+
+                                    <!--The Disabled state is omitted for brevity.-->
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+                            <Border.Background >
+                                <ImageBrush x:Name="ImageBrush" ImageSource="Images/Settings Button2.png"  >
+                                </ImageBrush>
+                            </Border.Background>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style x:Key="closeApplicationStyle" TargetType="{x:Type Button}">
+            <Setter Property="OverridesDefaultStyle" Value="True"></Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button" >
+
+                        <Border Name="RootElement" ClipToBounds="False"  BorderThickness="6"  Width="50" Height="50" >
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="CommonStates">
+
+                                    <VisualState x:Name="Normal" />
+
+                                    <VisualState x:Name="MouseOver">
+                                        <Storyboard>
+                                            <DoubleAnimation Storyboard.TargetName="RootElement"  Storyboard.TargetProperty="Width"  From="50"
+                            To="54" Duration="0:0:.1">
+
+                                            </DoubleAnimation>
+                                            <DoubleAnimation Storyboard.TargetName="RootElement"  Storyboard.TargetProperty="Height"  From="50"
+                            To="54" Duration="0:0:.1">
+                                            </DoubleAnimation>
+                                        </Storyboard>
+                                    </VisualState>
+
+
+
+                                    <!--The Disabled state is omitted for brevity.-->
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+                            <Border.Background >
+                                <ImageBrush x:Name="ImageBrush" ImageSource="Images/CloseButton.png"  >
+                                </ImageBrush>
+                            </Border.Background>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style x:Key="simpleButtonStyle" TargetType="{x:Type Button}">
+            <Setter Property="OverridesDefaultStyle" Value="True"></Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button" >
+
+                        <Border Name="RootElement"  >
+                            <TextBlock x:Name="buttonText" HorizontalAlignment="Center" VerticalAlignment="Center"  Foreground="#FF535252" 
+                                       Text="{TemplateBinding ContentStringFormat}"/>
+
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="CommonStates">
+
+                                    <VisualState x:Name="Normal" />
+
+                                    <VisualState x:Name="MouseOver">
+                                        <Storyboard>
+                                            <DoubleAnimation Storyboard.TargetName="RootElement" Storyboard.TargetProperty="(Button.Opacity)"
+                                             From="1" To=".6" Duration="0:0:.1"                ></DoubleAnimation>
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="Disabled" >
+                                        <Storyboard>
+                                            <DoubleAnimation Storyboard.TargetName="RootElement" Storyboard.TargetProperty="(Button.Opacity)"
+                                             From="1" To=".2" Duration="0:0:.25"                ></DoubleAnimation>
+                                        </Storyboard>
+                                    </VisualState>
+
+
+
+                                    <!--The Disabled state is omitted for brevity.-->
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+                            <Border.Background >
+                                <ImageBrush x:Name="ImageBrush" ImageSource="Images/Border.png"  >
+                                </ImageBrush>
+                            </Border.Background>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+    </Window.Resources>
+    <Window.Background>
+        <ImageBrush ImageSource="Images/MainWindowPane.png"/>
+    </Window.Background>
+    <Grid>
         <ComboBox x:Name="backgroundCombobox" HorizontalAlignment="Left" Margin="468,174,0,0" VerticalAlignment="Top" Width="142"/>
         <TextBox x:Name="backgroundRefreshTextBox" HorizontalAlignment="Left" Height="23" Margin="255,174,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.486,1.997" PreviewTextInput="CheckIfNumber"/>
         <Label Content="Background Refresh Frequency" HorizontalAlignment="Left" Margin="203,121,0,0" VerticalAlignment="Top" Width="252" FontSize="16" FontWeight="Bold"/>
         <Label Content="Collection Refresh Frequency" HorizontalAlignment="Left" Margin="203,251,0,0" VerticalAlignment="Top" Width="227" FontSize="16" FontWeight="Bold"/>
         <TextBox x:Name="collectionTextBox" HorizontalAlignment="Left" Height="23" Margin="255,287,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" PreviewTextInput="CheckIfNumber"/>
         <ComboBox x:Name="collectionComboBox" HorizontalAlignment="Left" Margin="468,287,0,0" VerticalAlignment="Top" Width="142"/>
-        <Button x:Name="changeBackgroundButton" Content="Change Current Background" HorizontalAlignment="Left" Margin="70,364,0,0" VerticalAlignment="Top" Width="168" Height="33" Click="ChangeBackgroundButton_Click"/>
-        <Button x:Name="backgroundRefreshButton" Content="Change" HorizontalAlignment="Left" Margin="350,219,0,0" VerticalAlignment="Top" Width="120" Height="27" Click="BackgroundRefreshButton_Click"/>
-        <Button x:Name="collectionRefreshButton" Content="Change" HorizontalAlignment="Left" Margin="350,315,0,0" VerticalAlignment="Top" Width="120" Height="27" RenderTransformOrigin="0.55,0.091" Click="CollectionRefreshButton_Click"/>
+        <Button x:Name="changeBackgroundButton"  Style="{StaticResource simpleButtonStyle}" ContentStringFormat="Change Current Background" HorizontalAlignment="Left" Margin="70,364,0,0" VerticalAlignment="Top" Width="210" Height="33" Click="ChangeBackgroundButton_Click"/>
+        <Button x:Name="backgroundRefreshButton" ContentStringFormat="Change"  Style="{StaticResource simpleButtonStyle}" HorizontalAlignment="Left" Margin="342,219,0,0" VerticalAlignment="Top" Width="138" Height="27" Click="BackgroundRefreshButton_Click"/>
+        <Button x:Name="collectionRefreshButton" ContentStringFormat="Change"  Style="{StaticResource simpleButtonStyle}" HorizontalAlignment="Left" Margin="342,315,0,0" VerticalAlignment="Top" Width="138" Height="27" RenderTransformOrigin="0.55,0.091" Click="CollectionRefreshButton_Click"/>
         <Label Content="File Save Path" HorizontalAlignment="Left" Margin="213,20,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="resetApplicationButton" Content="Reset Application" HorizontalAlignment="Left" Margin="557,364,0,0" VerticalAlignment="Top" Width="168" Height="28" Click="ResetApplicationButton_Click" Background="#FFE41B1B"/>
+        <Button x:Name="resetApplicationButton" Content="Reset Application"  HorizontalAlignment="Left" Margin="570,366,0,0" VerticalAlignment="Top" Width="168" Height="31" Click="ResetApplicationButton_Click" Background="#FFE41B1B"/>
         <Label x:Name="fileSavePathLabel" Content="" HorizontalAlignment="Left" Margin="223,56,0,0" VerticalAlignment="Top" Width="502"/>
-        <Button x:Name="openInstructionsButton" Content="Open Instructions" HorizontalAlignment="Left" Margin="331,364,0,0" VerticalAlignment="Top" Width="157" Height="33" Click="OpenInstructionsButton_Click"/>
-
+        <Button x:Name="openInstructionsButton"  Style="{StaticResource simpleButtonStyle}" ContentStringFormat="Open Instructions" HorizontalAlignment="Left" Margin="331,364,0,0" VerticalAlignment="Top" Width="157" Height="33" Click="OpenInstructionsButton_Click"/>
+        <Button x:Name="closeSettingsButton" Style="{StaticResource closeApplicationStyle}" Margin="732,10,10,382" Click="OnCloseSettingsClick"/>
     </Grid>
 </Window>
