Updated some UI + added stability to Quartz scheduling

--- a/AutomatedDesktopBackgroundUI/App.xaml
+++ b/AutomatedDesktopBackgroundUI/App.xaml
@@ -5,6 +5,10 @@
              ShutdownMode="OnMainWindowClose"
              StartupUri="RootWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary >
+            <ResourceDictionary.MergedDictionaries >
+                <ResourceDictionary Source="Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
